force-app/main/default/objects/Exhibition_Hotel__c/Exhibition_Hotel__c.object-meta.xml
<CustomObject>
    <label>Exhibition Point</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exhibition Points</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>