force-app/main/default/objects/Exhibition_Hotel__c/fields/HotelType__c.field-meta.xml
<CustomField>
    <fullName>HotelType__c</fullName>
    <label>HotelType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Noneed</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Other point</fullName>
            </value>
            <value>
                <fullName>unarrage</fullName>
            </value>
            <value>
                <fullName>Shuttle pick-up point</fullName>
            </value>
            <value>
                <fullName>Arrive pick-up point</fullName>
            </value>
            <value>
                <fullName>Arrive drop-off point</fullName>
            </value>
            <value>
                <fullName>Leave pick-up point</fullName>
            </value>
            <value>
                <fullName>Leave drop-off point</fullName>
            </value>
            <value>
                <fullName>Exhibition  Hotel</fullName>
            </value>
            <value>
                <fullName>Exhibition  Airport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>