force-app/main/default/objects/Exhibition_Hotel__c/fields/If_Cancel__c.field-meta.xml
<CustomField>
    <fullName>If_Cancel__c</fullName>
    <label>If Cancel</label>
    <length>50</length>
    <type>Text</type>
</CustomField>