force-app/main/default/objects/Exhibition_Hotel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Hotel_Name_CN__c</columns>
    <columns>DescriptionCN__c</columns>
    <columns>HotelType__c</columns>
    <columns>Exhibition_Management__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>