force-app/main/default/objects/Exhibition_Hotel__c/listViews/IFA2025.listView-meta.xml
<ListView>
    <fullName>IFA2025</fullName>
    <columns>NAME</columns>
    <columns>Hotel_Name_CN__c</columns>
    <columns>HotelType__c</columns>
    <columns>Exhibition_Management__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Exhibition_Management__c</field>
        <operation>contains</operation>
        <value>2025IFA</value>
    </filters>
    <label>IFA2025</label>
</ListView>