force-app/main/default/objects/Exhibition_Hotel__c/listViews/X137_Canton_Fair.listView-meta.xml
<ListView>
    <fullName>X137_Canton_Fair</fullName>
    <columns>NAME</columns>
    <columns>Hotel_Name_CN__c</columns>
    <columns>HotelType__c</columns>
    <columns>DescriptionCN__c</columns>
    <columns>Exhibition_Management__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Exhibition_Management__c</field>
        <operation>contains</operation>
        <value>137</value>
    </filters>
    <label>137 Canton Fair</label>
</ListView>